# csv-to-mysql-etl

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt  schema.sql  test_db_connection.py
data/processed/: clean_superstore.csv
db/: mysql_connection.py
dev/: config.example.py  config.py.example
etl_pipeline/: extract.py  load.py  transform.py
utils/: __init__.py  logger.py
validation/: __init__.py  schemas.py
