[project]
name = "csv-to-mysql-etl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "loguru>=0.7.3",
    "mysql-connector-python>=9.5.0",
    "pandas>=2.3.3",
    "pandera>=0.27.1",
    "python-dotenv>=1.2.1",
    "ruff>=0.14.10",
    "ty>=0.0.6",
]
